--- a/source/_posts/酷炫小动画.md
+++ b/source/_posts/酷炫小动画.md
@@ -1,5 +1,5 @@
 ---
-title: 【无标题】
+title: 酷炫小动画
 date: 2021-12-18 11:24:41
 tags: 动画 css3 css
 categories: bo‘k
@@ -22,14 +22,14 @@ categories: bo‘k
 \}  
 \}  
 看着样式挺简单的，但每一步真的是细节满满啊，  
-动画的播放时间是animation-duration；  
+动画的播放时间是 animation-duration；  
 动画播放次数 infinite 表示无限次数；  
-动画的播放控制 播放running\(默认值\) 暂停:paused;  
+动画的播放控制 播放 running\(默认值\) 暂停:paused;  
 animation-play-state: paused;  
-当然喽 这个paused一般和咱们hover属性连用；  
-还有animation-timing-function属性，描述的是动画的速度曲线；  
+当然喽 这个 paused 一般和咱们 hover 属性连用；  
+还有 animation-timing-function 属性，描述的是动画的速度曲线；  
 linear：线性过渡。ease-in：由慢到快。ease-out：由快到慢。ease-in-out：由慢到快再到慢。。step-start：等同于 steps\(1, start\) step-end：等同于 steps\(1, end\)  
-animation-fill-mode:forwards：设置对象状态为动画结束时的状态,backwards：设置对象状态为动画kai始时的状态.both：设置对象状态为动画结束或开始的状态。  
-animation-direction:检索或设置对象动画在循环中是否反向运动。默认值是normal ，还可以设置 alternate ，表示物体反向运动。  
-然后咱们动画的顺序是animation: name duration timing-function delay iteration-count direction fill-mode;  
+animation-fill-mode:forwards：设置对象状态为动画结束时的状态,backwards：设置对象状态为动画 kai 始时的状态.both：设置对象状态为动画结束或开始的状态。  
+animation-direction:检索或设置对象动画在循环中是否反向运动。默认值是 normal ，还可以设置 alternate ，表示物体反向运动。  
+然后咱们动画的顺序是 animation: name duration timing-function delay iteration-count direction fill-mode;  
 也就是 名字 持续时间 速度曲线 延时 循环次数 是否往返运动 开始结束的位置 。。。。
