--- a/source/_posts/2021-10-26.md
+++ b/source/_posts/2021-10-26.md
@@ -1,34 +1,34 @@
 ---
-title: 2021-10-26
+title: java基础
 date: 2021-10-26 21:50:27
-tags: 
+tags:
 categories: 笔记
 ---
 
 <!--more-->
 
 _**练习二**_  
-1.什么是jdk，什么是jre，jdk与jre什么关系  
-jdk＝jre+java的开发工具  
-jre=jvm+java的核心类库  
-jdk包含了jre  
-2.java开发工具jdk10安装后，生成几个子文件夹，内容有哪些。  
+1.什么是 jdk，什么是 jre，jdk 与 jre 什么关系  
+jdk ＝ jre+java 的开发工具  
+jre=jvm+java 的核心类库  
+jdk 包含了 jre  
+2.java 开发工具 jdk10 安装后，生成几个子文件夹，内容有哪些。  
 bin 命令程序  
-conf 供开发者编辑的java系统配置文件  
+conf 供开发者编辑的 java 系统配置文件  
 include 支持本地代码编程的头文件  
-jmods 存放预编译的java模板  
+jmods 存放预编译的 java 模板  
 legal 声明和协议  
-lib java类库  
-3.环境变量path和classpath的作用，如何配置环境变量，  
-在任何路径下都可以执行java的开发工具  
-\% Java\_Home\%\\bin  
-4.编写java程序的注意事项  
-✔大小写敏感  
-✔类名：对于所有的类来说，类名的首字母应该大写。如果类名由若干单词组成，那么每个单词的首字母应该大写，例如 MyFirstJavaClass  
-✔方法名：所有的方法名都应该以小写字母开头。如果方法名含有若干单词，则后面的每个单词首字母大写。  
-✔源文件名：源文件名必须和类名相同。当保存文件的时候，你应该使用类名作为文件名保存（切记 Java 是大小写敏感的），文件名的后缀为 .java。（如果文件名和类名不相同则会导致编译错误）。✔主方法入口：  
-所有的 Java 程序由public static void main\(String \[\]args\)\{\} 方法开始执行。  
-5.java应用程序的主类是什么样的类。  
-一个程序中可以有多个类，但只能有一个类是主类。在Java应用程序中，这个主类是指包含main（）方法的类。  
-6.如何在命令行方式下编译与运行java应用程序。  
+lib java 类库  
+3.环境变量 path 和 classpath 的作用，如何配置环境变量，  
+在任何路径下都可以执行 java 的开发工具  
+\% Java_Home\%\\bin  
+4.编写 java 程序的注意事项  
+✔ 大小写敏感  
+✔ 类名：对于所有的类来说，类名的首字母应该大写。如果类名由若干单词组成，那么每个单词的首字母应该大写，例如 MyFirstJavaClass  
+✔ 方法名：所有的方法名都应该以小写字母开头。如果方法名含有若干单词，则后面的每个单词首字母大写。  
+✔ 源文件名：源文件名必须和类名相同。当保存文件的时候，你应该使用类名作为文件名保存（切记 Java 是大小写敏感的），文件名的后缀为 .java。（如果文件名和类名不相同则会导致编译错误）。✔ 主方法入口：  
+所有的 Java 程序由 public static void main\(String \[\]args\)\{\} 方法开始执行。  
+5.java 应用程序的主类是什么样的类。  
+一个程序中可以有多个类，但只能有一个类是主类。在 Java 应用程序中，这个主类是指包含 main（）方法的类。  
+6.如何在命令行方式下编译与运行 java 应用程序。  
 略略略
